<resources>
    <string name="app_name">GeekNews</string>
    <string name="GeeKNews">GeeKNews</string>
    <string name="zixun">资讯</string>
    <string name="zhihu">知乎</string>
    <string name="wechat">微信</string>
    <string name="gank">干货集中营</string>
    <string name="rare">稀土掘金</string>
    <string name="collector">收藏</string>
    <string name="setting">设置</string>
    <string name="select">选项</string>
    <string name="about">关于</string>
    <string name="vtex">V2EX</string>
</resources>
